--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,57 @@
+/* font family set-up */
+
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Indie+Flower&display=swap');
+
+/* grid alignment */
+
+.center {
+    margin: 0 auto;
+}
+
+/* padding between sections */
+
+.section-padding {
+    margin-left: 0;
+    margin-right: 0;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    background-color: black;
+}
+
+/* background colours */
+
+.bg-grey {
+    background-color: grey;
+}
+
+.bg-black {
+    background-color: black;
+}
+
+.bg-white {
+    background-color: lightgrey;
+}
+
+/* font styles */
+
+.font-navigation {
+    font-family: "Amatic SC", sans-serif;
+    font-size: 20px;
+}
+
+.font-text {
+    font-family: "Indie Flower", sans-serif;
+}
+
+/* font colours */
+
+.font-white {
+    color: white;
+}
+
+/* logo setup */
+
 .logo {
     background: url("../images/logo.jpg");
     background-repeat: no-repeat;
@@ -5,30 +59,45 @@
     background-size: contain;
     min-height: 100px;
     background-color: black;
-
 }
 
-.heading {
-    background-color: grey;
-}
+/* navigation formatting */
 
 .navigation {
-    background-color: orange;
+    text-align: center;
 }
 
-.information {
-    background-color: lightgrey;
+/* icon formatting in social media section */
+
+.social-media a {
+    width: 50px;
+    height: 60px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    padding-bottom: 20px;
+    margin: 0 auto;
+    font-size: 30px;
+    text-align: center;
 }
 
-.colour1 {
-    background-color: blue;
+.space {
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
-.colour2{
-    background-color: yellow;
+/* hyperlink animations */
+
+.hover-glow {
+    transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out; 
+    -webkit-transition: all 0.2s ease-in-out; 
+    -o-transition: all 0.2s ease-in-out; 
+    color: white;
 }
 
-.colour3 {
-    background-color: green;
-
+.hover-glow:hover {
+    color: orange;
+    text-decoration: none;
 }
+
