--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-/* font family set-up */
+/* font family imports */
 
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Indie+Flower&display=swap');
@@ -14,15 +14,26 @@
 .section-padding {
     margin-left: 0;
     margin-right: 0;
-    padding-bottom: 10px;
-    padding-top: 10px;
+    padding: 10px, 10px, 10px, 10px;
     background-color: black;
+}
+
+/* border line between sections */
+
+.border-black {
+    border-top: 4px solid black;
+    border-bottom: 4px solid black;
+}
+
+.border-grey {
+    border-top: 4px solid grey;
+    border-bottom: 4px solid grey;
 }
 
 /* background colours */
 
 .bg-grey {
-    background-color: grey;
+    background-color: lightgray;
 }
 
 .bg-black {
@@ -30,18 +41,27 @@
 }
 
 .bg-white {
-    background-color: lightgrey;
+    background-color: white;
 }
 
 /* font styles */
 
 .font-navigation {
     font-family: "Amatic SC", sans-serif;
-    font-size: 20px;
+    font-size: 30px;
+    text-align: center;
+}
+
+.font-subheading {
+    font-family: "Amatic SC", sans-serif;
+    font-size: 42px;
+    text-align: right;
 }
 
 .font-text {
     font-family: "Indie Flower", sans-serif;
+    font-size: 24px;
+    text-align: left;
 }
 
 /* font colours */
@@ -50,7 +70,25 @@
     color: white;
 }
 
-/* logo setup */
+.font-black {
+    color: black;
+}
+
+/* subtitle formatting */
+
+h1 {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+/* main section formatting */
+
+p {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+/* logo formatting */
 
 .logo {
     background: url("../images/logo.jpg");
@@ -64,18 +102,21 @@
 /* navigation formatting */
 
 .navigation {
-    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 /* icon formatting in social media section */
 
+.social-media {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .social-media a {
     width: 50px;
     height: 60px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    padding-left: 20px;
-    padding-bottom: 20px;
+    padding: 0, 20px, 0, 20px;
     margin: 0 auto;
     font-size: 30px;
     text-align: center;
