--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -142,3 +142,9 @@ p {
     text-decoration: none;
 }
 
+/* photo carousel */
+
+  .carousel-inner img {
+      width: 600px;
+      max-height: 600px;
+}
