--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,12 @@
     text-align: center;
 }
 
+.font-form {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    text-align: left;
+}
+
 /* font colours */
 
 .font-white {
@@ -103,7 +109,7 @@ h1, p, .navigation, .social-media {
 .social-media a {
     width: 50px;
     height: 60px;
-    padding: 0, 20px;
+    padding: 0px 20px;
     margin: 0 auto;
     font-size: 30px;
     text-align: center;
@@ -185,13 +191,29 @@ audio {
 
 #contact-form {
     padding: 20px;
+    width: 100%;
 }
 
 /* submit button on form */
 
-button[type="submit"] {
-    margin-top: 10px;
-    margin-bottom: 10px;
+.button-send {
     color: white;
-    background-color: grey;
+    background-color: black;
+    border: none;
+    border-radius: 5px;
+    padding: 8px 16px;
+    display: block;
+    transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out; 
+    -webkit-transition: all 0.2s ease-in-out; 
+    -o-transition: all 0.2s ease-in-out; 
+}
+
+.button-send:hover {
+    background-color: orange;
+    color: black;
+}
+
+#contact-form > * {
+    margin: 10px;
 }
