--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,7 +70,7 @@
 
 .font-text {
     font-family: "Indie Flower", sans-serif;
-    font-size: 24px;
+    font-size: 20px;
     text-align: center;
 }
 
@@ -161,6 +161,18 @@ h1, p, .navigation, .social-media {
     color: orange !important;
 }
 
+/* information about family and career section */
+
+.about {
+    padding: 10px;
+}
+
+.information-source {
+    color: black;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 12px;
+}
+
 /* photo carousel section padding and margin */
 
 #photos {
@@ -231,7 +243,7 @@ h1, p, .navigation, .social-media {
 /* contact form size and padding */
 
 #contact-form {
-    padding: 20px 50px;
+    padding: 10px 50px;
     width: 100%;
     display: block;
     margin: 0 auto;
